fixed slide image black screen issue on Safari

--- a/sources/sass/sbplus.scss
+++ b/sources/sass/sbplus.scss
@@ -3,7 +3,8 @@
  *
  * @author: Ethan Lin
  * @url: https://github.com/excelsior-university-web-systems/sbplus-v3
- * Released 03/06/2024
+ * @version: 3.5.2
+ * Released 03/14/2024
  *
  * @license: GNU GENERAL PUBLIC LICENSE v3
  *
@@ -1115,22 +1116,22 @@ body {
 
                     // }
 
-                    // .show-vjs-poster {
+                    .show-vjs-poster {
                         
-                    //     .vjs-has-started {
+                        .vjs-has-started {
                             
-                    //         .vjs-poster {
-                    //             @include calc( height, '100% - ' + 33px );
-                    //             display: flex;
-                    //             align-items: center;
-                    //             justify-content: center;
-                    //             z-index: 1;
-                    //             cursor: default;
-                    //         }
+                            .vjs-poster {
+                                @include calc( height, '100% - ' + 33px );
+                                display: flex;
+                                align-items: center;
+                                justify-content: center;
+                                z-index: 1;
+                                cursor: default;
+                            }
                             
-                    //     }
+                        }
                         
-                    // }
+                    }
                     
                 }
                 
